# tropical_learning_public

./: Cargo.toml  README.md
autom_files/: hoge.txt  wfa0_a10_d10.json  wfa0_a10_d15.json  wfa0_a10_d20.json  wfa0_a10_d5.json  wfa0_a10_d50.json  wfa0_a15_d10.json  wfa0_a15_d15.json  wfa0_a15_d20.json  wfa0_a15_d5.json  wfa0_a15_d50.json  wfa0_a20_d10.json  wfa0_a20_d15.json  wfa0_a20_d20.json  wfa0_a20_d5.json  wfa0_a20_d50.json  wfa0_a25_d10.json  wfa0_a25_d15.json  wfa0_a25_d20.json  wfa0_a25_d5.json  wfa0_a25_d50.json  wfa0_a30_d10.json  wfa0_a30_d15.json  wfa0_a30_d20.json  wfa0_a30_d5.json  wfa0_a30_d50.json  wfa0_a5_d10.json  wfa0_a5_d15.json  wfa0_a5_d20.json  wfa0_a5_d5.json  wfa0_a5_d50.json  wfa1_a10_d10.json  wfa1_a10_d15.json  wfa1_a10_d20.json  wfa1_a10_d5.json  wfa1_a10_d50.json  wfa1_a15_d10.json  wfa1_a15_d15.json  wfa1_a15_d20.json  wfa1_a15_d5.json  (+261 more)
eqq_files/: a10.txt  a15.txt  a20.txt  a25.txt  a30.txt  a5.txt
src/: integer_semiring.rs  learning.rs  lib.rs  main.rs  matrix.rs  max_plus_semiring.rs  reader.rs  real_field.rs  semiring.rs  stopwatch.rs  util.rs  wfa.rs
val_files/: a10.txt  a15.txt  a20.txt  a25.txt  a30.txt  a5.txt
